--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "server=41.215.130.247;port=6603;database=web_api;user=root;password=toor"
+  }
 }
