--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "server=41.215.130.247;port=6603;database=web_api;user=root;password=toor"
+    "DefaultConnection": "server=41.215.130.247;port=6603;database=web_api;user=root;password=toor;persistsecurityinfo=true"
   }
 }
