--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,5 +1,4 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -8,11 +7,11 @@
       "sslPort": 44334
     }
   },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
+      "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "ProductCategory",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,11 +19,10 @@
     "web_api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "ProductCategory",
-      "applicationUrl": "https://localhost:44334;http://localhost:44334",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:44334;http://localhost:44334"
     }
   }
 }
