--- a/web_api.csproj
+++ b/web_api.csproj
@@ -32,6 +32,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.1" />
+    <PackageReference Include="System.Linq" Version="4.3.0" />
+    <PackageReference Include="System.Reflection" Version="4.3.0" />
   </ItemGroup>
 
 
