stylesheet files for styling

--- a/web_api.csproj
+++ b/web_api.csproj
@@ -36,5 +36,9 @@
     <PackageReference Include="System.Reflection" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Lib\css\" />
+  </ItemGroup>
+
 
 </Project>
